meecast (1.1.18) unstable; urgency=low

  * 

 -- Vlad Vasiliev <vlad@gas.by> Sat, 26 Aug 2017 18:02:23 +0200


meecast (1.1.17) unstable; urgency=low

  * Added string for translation
  * Added Iran and Georgia to foreca.com
  * Updated Russian, Dutch, Norwegian, Slovenian, Swedish, Germany translations

 -- Vlad Vasiliev <vlad@gas.by> Sat, 26 Aug 2017 18:02:23 +0200

meecast (1.1.16) unstable; urgency=low

  * Added new translation strings for weather.com
  * Added icon for foreca.com
  * Disabled Map
  * Added Innopolis city to gismeteo.ru, foreca.com sources
  * Updated Russian, Danish, Dutch, Polish, Swedish, Slovenian, Galician,
    Spanish, Catalan translations

 -- Vlad Vasiliev <vlad@gas.by> Sat, 31 Dec 2016 10:01:23 +0200

meecast (1.1.13) unstable; urgency=low

  * Updated Catalan, Spanish, Dutch, Slovenian tarnslations
  * Added string for translation

 -- Vlad Vasiliev <vlad@gas.by> Sun, 20 Mar 2016 16:01:23 +0200

meecast (1.1.12) unstable; urgency=low

  * Added icon for gismeteo.ru 
  * Added string for translation
  * Fixed station Sankt-Peterburg in gismeteo.ru source
  * Added station Daugavpils to weather.com source

 -- Vlad Vasiliev <vlad@gas.by> Sun, 20 Mar 2016 16:01:23 +0200

meecast (1.1.11) unstable; urgency=low

  * Fixed problem with sunrise and sunset in gismeteo.ru source 
  * Added icon for gismeteo.ru 
  * Added new translation string for gismeteo.ru 
  * Disabled logging

 -- Vlad Vasiliev <vlad@gas.by> Sun, 06 Mar 2016 18:01:23 +0200

meecast (1.1.10) unstable; urgency=low

  * Added string for translation
  * Fixed problem with gisemteo.ru source
  * Updated Russian, Catalan, Germany, Serbian, Swedish,
    Spanish, Russian, Danish, Norwegian, Dutch, Slovenian,
    Czech tarnslations

 -- Vlad Vasiliev <vlad@gas.by> Sun, 06 Mar 2016 18:01:23 +0200

meecast (1.1.9) unstable; urgency=low

  * Added stations in Russia to Openweathermap.org (Sverdlovskaya oblast,
    Krasnodarkiy Kray and Leningradskaya oblast) 