@@ -1,6 +1,8 @@
 meecast (1.1.18) unstable; urgency=low
 
-  * 
+  * Added string for translation
+  * Added stations to Ukraine in gismeteo.ru source
+  * Fixed segmentation fault for Melbourne(Australia) in bom.gov.au source
 
  -- Vlad Vasiliev <vlad@gas.by> Sat, 26 Aug 2017 18:02:23 +0200
 
@@ -116,7 +118,6 @@ meecast (1.1.1) unstable; urgency=low
   * Updated Germany, Danish translations
 
  -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200
-
 
 meecast (1.0.4) unstable; urgency=low
 
